edits to plotting lab

--- a/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "4             37             28  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "4                 0.0             37             28  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -419,11 +419,13 @@
     "\n",
     "The next task is to create a Matplotlib figure containing four subplots that looks like the figure with four plots shown below. The four subplots should be stacked on top of each other. Each subplot should contain the precipitation data vs. time (day of the year) in one year. The first subplot shows precipitation in 2013, the second subplot shows precipitation in 2014, etc. Include a title on each subplot and a y-axis label on each subplot. On the bottom subplot (Precipitation in 2016), include an x-axis label.\n",
     "\n",
-    "Use NumPy's ```np.where()``` function to save the precipitation data (number of inches only) exclusively for days in the year 2013 to a NumPy array called ```precip_2013```. Use the ```plt.subplots()``` method to plot the ```precip_2013``` data in the first subplot. \n",
+    "Use NumPy's ```np.where()``` function or boolean masks to save the precipitation data (number of inches only) exclusively for days in the year 2013 to a NumPy array called ```precip_2013```. Use the ```plt.subplots()``` method to plot the ```precip_2013``` data in the first subplot. \n",
     "\n",
     "Complete the same type of indexing operation on the precipitation data for 2014, then 2015, then 2016. Create a subplot for each year. The plot for 2016 should include an x-axis label and have the same axis limits as the x-axis limits in the other subplots.\n",
     "\n",
-    "The resulting figure which contains four subplots, one subplot for each year, should look something like below: \n",
+    " > Hint: When ```plt.subplots()``` is called, include the keyword argument ```figsize=(9,9)```. This keyword argument makes the figure larger and leaves more space for the axis labels and titles of each subplot. Modify the numbers ```(9,9)``` to change the figure width and height.\n",
+    "\n",
+    "The resulting figure which contains four subplots, one subplot for each year, should look something like below. The command ```plt.tight_layout()``` can also help with subplot spacing. \n",
     "\n",
     "![Plot 3: Four Subplots](images/plot3.png)"
    ]
@@ -440,7 +442,7 @@
     "\n",
     " > Hint: Create multiple boolean masks and then combine the boolean masks with NumPy's ```np.logical_and()``` and ```np.logical_or()``` functions. These two NumPy functions operate like Python's ```and```, ```or``` keywords, but can be applied to arrays of boolean values.\n",
     "\n",
-    "Index out the same days' (Nov 1, 2013 to Fab 27, 2014) **snow fall** data and save the snow fall data in this date range to a NumPy array called ```winter13_14_sf```.\n",
+    "Index out the same days' (Nov 1, 2013 to Feb 27, 2014) **snow fall** data and save the snow fall data in this date range to a NumPy array called ```winter13_14_sf```.\n",
     "\n",
     "Use Matplotlib's ```ax2 = ax1.twinx()``` method to plot both sets of data on the same plot (same x-axis), but with different y-axes.  \n",
     "\n",
