edits to image selection lab

--- a/ENGR114-Labs/Lab06-Audio_Filtering/ENGR114-Lab06-Image_Filtering.ipynb
+++ b/ENGR114-Labs/Lab06-Audio_Filtering/ENGR114-Lab06-Image_Filtering.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "The image can be found on-line here: [https://matplotlib.org/users/image_tutorial.html](https://matplotlib.org/users/image_tutorial.html)\n",
     "\n",
-    "Images can be displayed using Python and Matplotlib. The code cell below demonstrates how to read and display an image with Matplotlib. Ensure the image you want to show is in the same directory as your Jupyter notebook."
+    "Images can be displayed using Python and Matplotlib. The code cell below demonstrates how to read and display an image with Matplotlib. Ensure the image you want to display is in the same directory as your Jupyter notebook."
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ```stinkbug.png``` image is a gray scale image, but Matplotlib is rendering it as a color image. We can include an extra argument in the ```ax.imshow()``` method to choose a different color map. A list of all the possible color maps can be found on the Matplotlib documentation ([https://matplotlib.org/examples/color/colormaps_reference.html](https://matplotlib.org/examples/color/colormaps_reference.html)).\n",
+    "The ```stinkbug.png``` image is a gray scale image, but Matplotlib is rendering it as a color image. We can include an extra argument in the ```ax.imshow()``` method to choose a different color map. A list of all the possible color maps can be found in the Matplotlib documentation ([https://matplotlib.org/examples/color/colormaps_reference.html](https://matplotlib.org/examples/color/colormaps_reference.html)).\n",
     "\n",
     "The code cell below demonstartes how to use a custom color map to display the image"
    ]
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct a script that tells a user their colormap options. Then use Python's ```input()``` function to ask the user for a color map. Then ask the user if they want gridlines. Finally ask the user if they want tick labels. After the user selects all of the options, show the user the image based on their preferences.\n",
+    "Construct a script that tells a user the possible colormap options. Then use Python's ```input()``` function to ask the user for a color map. Next, ask the user if they want gridlines. Finally ask the user if they want tick labels. After the user selects all of the options, show the user the image based on their preferences.\n",
     "\n",
     "The code below demonstrates how the script might function:\n",
     "\n",
@@ -162,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
