--- a/ENGR114-Labs/Lab06-Image_Filtering/preamble.tex
+++ b/ENGR114-Labs/Lab06-Image_Filtering/preamble.tex
@@ -8,6 +8,7 @@
 \usepackage{framed,color}
 \definecolor{shadecolor}{rgb}{.8,.8,.8}
 \usepackage{titlesec}
+\usepackage{listings}
 % no indent on any paragraphs, vertical spacing between paragraphs is set to 1em
 \usepackage[]{parskip}  % add [skip=1em] if the compiler will allow.
 
