--- a/ENGR114-Labs/Lab07-Taylor_Series/ENGR114-Lab07-Taylor_Series.tex
+++ b/ENGR114-Labs/Lab07-Taylor_Series/ENGR114-Lab07-Taylor_Series.tex
@@ -397,7 +397,6 @@ The taylor() function returns the taylor series approximation of sin(x) or e^(x)
  Output:
      - series_sum: equals the sum of all of the terms in the Taylor Series up to the number of terms specified.
        Will be a float.
-
 """
 \end{verbatim}
 
@@ -480,13 +479,11 @@ Below are a couple of tips to help you complete the lab:
 \subsection{Deliverables}\label{deliverables}}
 
 Once you are satisfied that your file meets all the requirements,
-suppress all screen output, save your \textbf{lab7.py} file, and submit
+suppress all screen output, save your \textbf{taylor\_series.py} file and \textbf{lab7.ipynb} file, and submit
 it to appropriate D2L folder.
 
-    \hypertarget{by-p.-kazarinoff-portland-community-college-2018}{%
-\paragraph{\texorpdfstring{\emph{By P. Kazarinoff, Portland Community
-College,
-2018}}{By P. Kazarinoff, Portland Community College, 2018}}\label{by-p.-kazarinoff-portland-community-college-2018}}
+    \hypertarget{by-p.-kazarinoff-portland-community-college-2019}{%
+\paragraph{\texorpdfstring{\emph{By P. Kazarinoff, Portland Community College, 2019}}{By P. Kazarinoff, Portland Community College, 2019}}\label{by-p.-kazarinoff-portland-community-college-2019}}
 
 
     % Add a bibliography block to the postdoc
